# fun-with-rust-apis

./: Cargo.toml  README.md  someFile
src/: main.rs  service.rs
