[package]
name = "practiceApi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
env_logger = "0.11.5"
futures = "0.3.31"
hyper = { version = "1.4.1", features = ["server"] }
log = "0.4.22"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
